maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:68: error: not enough arguments for method marqueCasesAccessibles: (pos: Array[Int], poids: Int)Unit.
Unspecified value parameter poids.
          marqueCasesAccessibles(Array(x, y))
                                ^